--- a/.github/workflows/e2e-llama-cpp-python.yaml
+++ b/.github/workflows/e2e-llama-cpp-python.yaml
@@ -1,6 +1,6 @@
 # End-to-end testing that deploys Supabase and the API, and deploy/tests llama-cpp-python, text-embeddings, and whisper
 
-name: e2e-llama-cpp-python
+name: LLaMA C++ Python E2E Tests
 on:
   pull_request:
     types:
@@ -15,6 +15,7 @@ on:
       - "!.github/**"
       - ".github/workflows/e2e-llama-cpp-python.yaml"
       - ".github/actions/uds-cluster/action.yaml"
+      - ".github/actions/lfai-core/action.yaml"
 
       # Ignore docs and website things
       - "!**.md"
@@ -55,31 +56,31 @@ jobs:
     if: ${{ !github.event.pull_request.draft }}
 
     steps:
-        - name: Checkout Repo
-          uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Checkout Repo
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-        - name: Setup Python
-          uses: ./.github/actions/python
+      - name: Setup Python
+        uses: ./.github/actions/python
 
-        - name: Setup UDS Cluster
-          uses: ./.github/actions/uds-cluster
-          with:
-            registry1Username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
-            registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
+      - name: Setup UDS Cluster
+        uses: ./.github/actions/uds-cluster
+        with:
+          registry1Username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
+          registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
 
-        - name: Setup LFAI-API and Supabase
-          uses: ./.github/actions/lfai-core
+      - name: Setup LFAI-API and Supabase
+        uses: ./.github/actions/lfai-core
 
-        ##########
-        # llama
-        ##########
-        - name: Deploy llama-cpp-python
-          run: |
-            make build-llama-cpp-python LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/llama-cpp-python/zarf-package-llama-cpp-python-amd64-e2e-test.tar.zst -l=trace --confirm
-            rm packages/llama-cpp-python/zarf-package-llama-cpp-python-amd64-e2e-test.tar.zst
+      ##########
+      # llama
+      ##########
+      - name: Deploy llama-cpp-python
+        run: |
+          make build-llama-cpp-python LOCAL_VERSION=e2e-test
+          docker image prune -af
+          uds zarf package deploy packages/llama-cpp-python/zarf-package-llama-cpp-python-amd64-e2e-test.tar.zst -l=trace --confirm
+          rm packages/llama-cpp-python/zarf-package-llama-cpp-python-amd64-e2e-test.tar.zst
 
-        - name: Test llama-cpp-python
-          run: |
-            python -m pytest ./tests/e2e/test_llama.py -v
+      - name: Test llama-cpp-python
+        run: |
+          python -m pytest ./tests/e2e/test_llama.py -v
