--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -1,31 +1,32 @@
-name: pytest
+name: Python Tests
+
 on:
   pull_request:
     types:
-      - ready_for_review
-      - synchronize
-      - milestoned
+    - ready_for_review
+    - synchronize
+    - milestoned
     paths:
-      - "**"
-      - "!.github/**"
-      - ".github/workflows/pytest.yaml"
-      - ".github/workflows/pytest-shim.yaml"
+    - "**"
+    - "!.github/**"
+    - ".github/workflows/pytest.yaml"
+    - ".github/workflows/pytest-shim.yaml"
 
-      # Ignore docs and website things
-      - "!**.md"
-      - "!docs/**"
-      - "!adr/**"
-      - "!website/**"
-      - "!netlify.toml"
+    # Ignore docs and website things
+    - "!**.md"
+    - "!docs/**"
+    - "!adr/**"
+    - "!website/**"
+    - "!netlify.toml"
 
-      # Ignore updates to generic github metadata files
-      - "!CODEOWNERS"
-      - "!.gitignore"
-      - "!LICENSE"
+    # Ignore updates to generic github metadata files
+    - "!CODEOWNERS"
+    - "!.gitignore"
+    - "!LICENSE"
 
-      # Ignore LFAI-UI things (no Python)
-      - "!src/leapfrogai_ui/**"
-      - "!packages/ui/**"
+    # Ignore LFAI-UI things (no Python)
+    - "!src/leapfrogai_ui/**"
+    - "!packages/ui/**"
 
 # Declare default permissions as read only.
 permissions: read-all
@@ -39,25 +40,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+    - name: Checkout Repo
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-      - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c #v5.0.0
-        with:
-          python-version-file: 'pyproject.toml'
+    - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c #v5.0.0
+      with:
+        python-version-file: 'pyproject.toml'
 
-      - name: Build Repeater
-        env:
-          LOCAL_VERSION: dev
-        run: |
-          make docker-repeater
-      - name: Run Repeater
-        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev
+    - name: Build Repeater
+      env:
+        LOCAL_VERSION: dev
+      run: |
+        make docker-repeater
+    - name: Run Repeater
+      run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev
 
-      - name: Install Python Deps
-        run: pip install ".[dev]" "src/leapfrogai_api" "src/leapfrogai_sdk"
+    - name: Install Python Deps
+      run: pip install ".[dev]" "src/leapfrogai_api" "src/leapfrogai_sdk"
 
-      - name: Run Pytest
-        run: python -m pytest tests/pytest -v
-        env:
-          LFAI_RUN_REPEATER_TESTS: true
+    - name: Run Pytest
+      run: python -m pytest tests/pytest -v
+      env:
+        LFAI_RUN_REPEATER_TESTS: true
