--- a/.github/workflows/ui-test.yaml
+++ b/.github/workflows/ui-test.yaml
@@ -1,13 +1,13 @@
-name: ui-test
+name: UI Tests
 on:
   pull_request:
     paths:
-      # Ignore all workflows except this one
-      - ".github/workflows/ui-test.yaml"
+    # Ignore all workflows except this one
+    - ".github/workflows/ui-test.yaml"
 
-      # LFAI-UI things (no Python)
-      - "src/leapfrogai_ui/**"
-      - "packages/ui/**"
+    # LFAI-UI things (no Python)
+    - "src/leapfrogai_ui/**"
+    - "packages/ui/**"
 
 # Declare default permissions as read only.
 permissions: read-all
@@ -21,15 +21,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+    - name: Checkout Repo
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-      - uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
-        with:
-          node-version-file: 'src/leapfrogai_ui/package.json'
+    - uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+      with:
+        node-version-file: 'src/leapfrogai_ui/package.json'
 
-      - name: Install Dependencies
-        run: npm --prefix src/leapfrogai_ui ci
+    - name: Install Dependencies
+      run: npm --prefix src/leapfrogai_ui ci
 
-      - name: Run Unit Tests
-        run: npm --prefix src/leapfrogai_ui run test:unit
+    - name: Run Unit Tests
+      run: npm --prefix src/leapfrogai_ui run test:unit
