--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,13 +1,14 @@
 FROM cgr.dev/chainguard/bash:latest
-ARG TARGETPLATFORM
-ARG version="1.169.8"
-ARG MIGRATIONS_DIR
+
+ARG TARGETPLATFORM \
+    version="1.169.8" \
+    MIGRATIONS_DIR
 
 RUN test -n "$MIGRATIONS_DIR" || (echo "MIGRATIONS_PATH is required" && false)
 
 # Download the supabase cli
-RUN mkdir -p /usr/local/bin
-RUN ARCH=$(echo $TARGETPLATFORM | cut -d '/' -f2) \
+RUN mkdir -p /usr/local/bin \
+    ARCH=$(echo $TARGETPLATFORM | cut -d "/" -f2) \
     && curl -LO https://github.com/supabase/cli/releases/download/v${version}/supabase_linux_${ARCH}.tar.gz \
     && tar -xzf supabase_linux_${ARCH}.tar.gz -C /usr/local/bin/ \
     && rm supabase_linux_${ARCH}.tar.gz
