--- a/src/leapfrogai_sdk/Dockerfile
+++ b/src/leapfrogai_sdk/Dockerfile
@@ -9,5 +9,5 @@ COPY ./src/leapfrogai_sdk /leapfrogai/src/leapfrogai_sdk
 RUN python -m venv .venv
 ENV PATH="/leapfrogai/.venv/bin:$PATH"
 
-RUN rm -f ${SDK_DEST}/*.whl \
+RUN rm -f ${SDK_DEST}/*.whl && \
     python -m pip wheel src/leapfrogai_sdk -w ${SDK_DEST}
