--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -82,46 +82,10 @@ realtime:
       value: "testenckeychange" # This needs to be exactly 16 characters
     - name: DNS_NODES
       value: "supabase-realtime"
-  sidecars:
-   - name: realtime-init
-     image: docker.io/bitnami/os-shell:12-debian-12-r27
-     imagePullPolicy: IfNotPresent
-     env:
-      - name: SUPABASE_SERVICE_KEY
-        valueFrom:
-          secretKeyRef:
-            name: '{{ include "supabase.jwt.secretName" . }}'
-            key: '{{ include "supabase.jwt.serviceSecretKey" . }}'
-      - name: POSTGRESQL_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: supabase-postgresql
-            key: postgres-password
-      - name: JWT_SECRET
-        valueFrom:
-          secretKeyRef:
-            name: supabase-bootstrap-jwt
-            key: secret
-     command:
-       - sh
-       - -c
-       - >-
-         echo "Waiting for supabase-realtime to be ready...";
-         until curl -s -o /dev/null -w "%{http_code}" http://supabase-realtime.leapfrogai.svc.cluster.local:80/ | grep -q "200"; do
-           echo "Waiting for supabase-realtime to be ready...";
-           sleep 5;
-         done;
-         echo "supabase-realtime is ready. Running curl command...";
-         if curl --insecure -L -X POST -H "Content-Type: application/json" -H "Authorization: Bearer $SUPABASE_SERVICE_KEY" -H "apiKey: $SUPABASE_SERVICE_KEY" -d '{"tenant":{"name":"supabase-realtime","external_id":"supabase-realtime","jwt_secret":"'"$JWT_SECRET"'","extensions":[{"type":"postgres_cdc_rls","settings":{"db_name":"postgres","db_host":"supabase-postgresql","db_user":"supabase_admin","db_password":"'"$POSTGRESQL_PASSWORD"'","db_port":"5432","region":"us-east-1","publication":"supabase_realtime","ssl_enforced":false,"poll_interval_ms":100,"poll_max_record_bytes":1048576}}],"notify_private_alpha":true}}' https://supabase-kong.leapfrogai.svc.cluster.local/realtime/v1/api/tenants; then
-           echo "Curl command completed successfully. Entering sleep loop..."
-           while true; do
-             sleep 3600
-             echo "Sidecar still alive"
-           done
-         else
-           echo "Curl command failed. Exiting..."
-           exit 1
-         fi
+  args:
+    - -ec
+    - |
+      realtime eval Realtime.Release.migrate && realtime eval Realtime.Release.seeds(Realtime.Repo) && realtime start
 
 rest:
   enabled: ###ZARF_VAR_ENABLE_REST###
