dockerfile fixes, pt.3

--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -7,11 +7,11 @@ ARG TARGETPLATFORM \
 RUN test -n "$MIGRATIONS_DIR" || (echo "MIGRATIONS_PATH is required" && false)
 
 # Download the supabase cli
-RUN mkdir -p /usr/local/bin \
-    ARCH=$(echo $TARGETPLATFORM | cut -d "/" -f2) \
-    && curl -LO https://github.com/supabase/cli/releases/download/v${version}/supabase_linux_${ARCH}.tar.gz \
-    && tar -xzf supabase_linux_${ARCH}.tar.gz -C /usr/local/bin/ \
-    && rm supabase_linux_${ARCH}.tar.gz
+RUN mkdir -p /usr/local/bin && \
+    ARCH=$(echo $TARGETPLATFORM | cut -d "/" -f2) && \
+    curl -LO https://github.com/supabase/cli/releases/download/v${version}/supabase_linux_${ARCH}.tar.gz && \
+    tar -xzf supabase_linux_${ARCH}.tar.gz -C /usr/local/bin/ && \
+    rm supabase_linux_${ARCH}.tar.gz
 
 # 65532 is the UID of the `nonroot` user in chainguard/static.  See: https://edu.chainguard.dev/chainguard/chainguard-images/reference/static/overview/#users
 USER 65532:65532
