--- a/.github/workflows/docker-lint.yaml
+++ b/.github/workflows/docker-lint.yaml
@@ -28,9 +28,16 @@ jobs:
     name: Lint Docker Manifest
 
     permissions:
-      contents: read
+      contents: write
 
     steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Checkout Repo
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
@@ -50,6 +57,8 @@ jobs:
             \`\`\`
             ${process.env.HADOLINT_RESULTS}
             \`\`\`
+
+            **NOTE**: No action is required if results do not exceed \`warning\` level
             `;
 
             github.rest.issues.createComment({
