--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -79,7 +79,10 @@ realtime:
     - name: APP_NAME
       value: "supabase-realtime"
     - name: DB_ENC_KEY
-      value: "testenckeychange" # This needs to be exactly 16 characters
+      valueFrom:
+        secretKeyRef:
+          name: supabase-realtime-extra
+          key: db-enc-key
     - name: DNS_NODES
       value: "supabase-realtime"
   args:
