--- a/packages/supabase/chart/templates/suapbase-realtime-secret.yaml
+++ b/packages/supabase/chart/templates/suapbase-realtime-secret.yaml
@@ -3,16 +3,16 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: supabase-realtime-extra
-  namespace: {{ .Release.Namespace }}
-  {{- if $existingSecret }}
-  annotations:
-    "helm.sh/resource-policy": keep
-  {{- end }}
+ name: supabase-realtime-extra
+ namespace: {{ .Release.Namespace }}
+ {{- if $existingSecret }}
+ annotations:
+   "helm.sh/resource-policy": keep
+ {{- end }}
 type: Opaque
 data:
-  {{- if $existingSecret }}
-  db-enc-key: {{ $existingSecret.data.db-enc-key }}
-  {{- else }}
-  db-enc-key: {{ $dbEncKey | b64enc | quote }}
-  {{- end }}
+ {{- if $existingSecret }}
+ dbEncKey: {{ $existingSecret.data.dbEncKey }}
+ {{- else }}
+ dbEncKey: {{ $dbEncKey | b64enc | quote }}
+ {{- end }}
