--- a/packages/supabase/migrationChart/templates/migration-job.yaml
+++ b/packages/supabase/migrationChart/templates/migration-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: supabase-migrations-{{ .Values.leapfrogai.migration.imageTag }}
+  name: supabase-migrations
 spec:
   template:
     spec:
