--- a/packages/supabase/migrationChart/values.yaml
+++ b/packages/supabase/migrationChart/values.yaml
@@ -5,7 +5,7 @@ leapfrogai:
     fsGroup: 65532
 
   migration:
-    imageTag: "###ZARF_CONST_IMAGE_VERSION###"
+    imageTag: ###ZARF_CONST_IMAGE_VERSION###
     namespace: "leapfrogai"
     serviceName: "supabase-postgresql"
     servicePort: "5432"
