--- a/packages/ui/chart/templates/ui/migration-job.yaml
+++ b/packages/ui/chart/templates/ui/migration-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: ui-migrations-{{ .Values.image.tag }}
+  name: ui-migrations
 spec:
   template:
     spec:
