--- a/packages/supabase/values/upstream/leapfrogai-values.yaml
+++ b/packages/supabase/values/upstream/leapfrogai-values.yaml
@@ -2,6 +2,24 @@ podSecurityContext:
   fsGroup: 65532
 
 supabase:
+  securityContext:
+    runAsUser: 65532
+    runAsGroup: 65532
+    runAsNonRoot: true
+    capabilities:
+      drop:
+      - ALL
+
+  sso:
+    host: supabase-kong
+    name: supabase
+    component: kong
+    clientId: ###ZARF_CONST_EXTERNAL_KEYCLOAK_CLIENT_ID###
+    redirectUris:
+      - "https://supabase-kong.###ZARF_VAR_DOMAIN###/auth/v1/callback"
+    webOrigins:
+      - "https://ai.###ZARF_VAR_DOMAIN###"
+
   migration:
     image:
       repository: ghcr.io/defenseunicorns/leapfrogai/supabase-migrations
