--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -71,22 +71,26 @@ components:
         releaseName: supabase-bootstrap
         version: 4.0.5
         valuesFiles:
-          - "chart/values.yaml"
-          - "values/bitnami-values-bootstrap.yaml"
+          - "values/upstream/supabase-values.yaml"
+          - "values/upstream/supabase-bootstrap-values.yaml"
+      # generate the Supabase dashboard secret and setup the UDS package CR
       - name: supabase-secrets-generator
         namespace: leapfrogai
-        localPath: chart/
+        localPath: chart
         releaseName: supabase-secrets-generator
         # x-release-please-start-version
         version: 0.10.0
         # x-release-please-end
+        valuesFiles:
+          - "values/upstream/supabase-values.yaml"
+          - "values/upstream/leapfrogai-values.yaml"
       - name: supabase
         namespace: leapfrogai
         url: oci://registry-1.docker.io/bitnamicharts/supabase
         releaseName: supabase
         version: 4.0.5
         valuesFiles:
-          - "chart/values.yaml"
+          - "values/upstream/supabase-values.yaml"
     images:
       - docker.io/bitnami/gotrue:2.150.1-debian-12-r1
       - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r20
@@ -129,11 +133,13 @@ components:
     charts:
       - name: supabase-migrations
         namespace: leapfrogai
-        localPath: migrationChart/
+        localPath: migrationChart
         releaseName: supabase-migrations
         # x-release-please-start-version
         version: 0.10.0
         # x-release-please-end
+        valuesFiles:
+          - "values/upstream/leapfrogai-values.yaml"
     images:
       - "ghcr.io/defenseunicorns/leapfrogai/supabase-migrations:###ZARF_PKG_TMPL_IMAGE_VERSION###"
     actions:
