--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -79,7 +79,7 @@ realtime:
     - name: APP_NAME
       value: "supabase-realtime"
     - name: DB_AFTER_CONNECT_QUERY
-      value: "SET search_path TO public"
+      value: "create schema if not exists _realtime; alter schema _realtime owner to postgres; SET search_path TO _realtime;"
     - name: DB_ENC_KEY
       valueFrom:
         secretKeyRef:
