security contexts and zarf versus helm usage

--- a/packages/llama-cpp-python/chart/values.yaml
+++ b/packages/llama-cpp-python/chart/values.yaml
@@ -19,11 +19,15 @@ podAnnotations: {}
 
 podSecurityContext:
   runAsNonRoot: true
+  fsGroup: 65532
 
 securityContext:
   runAsUser: 65532
   runAsGroup: 65532
-  fsGroup: 65532
+  runAsNonRoot: true
+  capabilities:
+    drop:
+    - ALL
 
 service:
   type: ClusterIP
