--- a/packages/supabase/chart/values.yaml
+++ b/packages/supabase/chart/values.yaml
@@ -2,16 +2,17 @@
 # UDS and LeapfrogAI
 ####################
 
-supabase:
-  sso:
-    host: supabase-kong
-    name: supabase
-    component: kong
-    clientId: ###ZARF_CONST_EXTERNAL_KEYCLOAK_CLIENT_ID###
-    redirectUris:
-      - "https://supabase-kong.###ZARF_VAR_DOMAIN###/auth/v1/callback"
-    webOrigins:
-      - "https://ai.###ZARF_VAR_DOMAIN###"
+leapfrogai:
+  supabase:
+    sso:
+      host: supabase-kong
+      name: supabase
+      component: kong
+      clientId: ###ZARF_CONST_EXTERNAL_KEYCLOAK_CLIENT_ID###
+      redirectUris:
+        - "https://supabase-kong.###ZARF_VAR_DOMAIN###/auth/v1/callback"
+      webOrigins:
+        - "https://ai.###ZARF_VAR_DOMAIN###"
 
 ##########
 # Supabase
