--- a/packages/text-embeddings/chart/templates/deployment.yaml
+++ b/packages/text-embeddings/chart/templates/deployment.yaml
@@ -26,6 +26,8 @@ spec:
         app: lfai-text-embeddings
         {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- if gt (index .Values.resources.limits "nvidia.com/gpu") 0.0 }}
       runtimeClassName: nvidia
       {{- else if .Values.gpu.runtimeClassName }}
@@ -36,9 +38,7 @@ spec:
         - name: data-loader
           image: cgr.dev/chainguard/bash:latest
           securityContext:
-            runAsUser: 65532
-            runAsGroup: 65532
-            fsGroup: 65532
+            {{- toYaml .Values.securityContext | nindent 12 }}
           # This command looks for the Zarf "data injection marker" which is a timestamped file that is injected after everything else and marks the injection as complete.
           command:
             [
@@ -60,8 +60,6 @@ spec:
         - name: leapfrogai-pv-storage
           persistentVolumeClaim:
             claimName: lfai-text-embeddings-pv-claim
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
