--- a/packages/llama-cpp-python/chart/templates/deployment.yaml
+++ b/packages/llama-cpp-python/chart/templates/deployment.yaml
@@ -27,13 +27,13 @@ spec:
         {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
       # It's necessary to include the ###ZARF_DATA_INJECTION_MARKER### somewhere in the podspec, otherwise data injections will not occur.
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       initContainers:
         - name: data-loader
           image: cgr.dev/chainguard/bash:latest
           securityContext:
-            runAsUser: 65532
-            runAsGroup: 65532
-            fsGroup: 65532
+            {{- toYaml .Values.securityContext | nindent 12 }}
           # This command looks for the Zarf "data injection marker" which is a timestamped file that is injected after everything else and marks the injection as complete.
           command:
             [
@@ -55,8 +55,6 @@ spec:
         - name: leapfrogai-pv-storage
           persistentVolumeClaim:
             claimName: lfai-llama-pv-claim
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
