--- a/packages/supabase/values/upstream/supabase-values.yaml
+++ b/packages/supabase/values/upstream/supabase-values.yaml
@@ -10,7 +10,9 @@ jwt:
     resourcesPreset: "none"
     podLabels:
       sidecar.istio.io/inject: "false"
+
 publicURL: "https://supabase-kong.###ZARF_VAR_DOMAIN###"
+
 auth:
   enabled: ###ZARF_VAR_ENABLE_AUTH###
   defaultConfig: |
@@ -38,8 +40,8 @@ auth:
     GOTRUE_MAILER_URLPATHS_RECOVERY: "{{ include "supabase.studio.publicURL" . }}/auth/v1/verify"
     GOTRUE_MAILER_URLPATHS_EMAIL_CHANGE: "{{ include "supabase.studio.publicURL" . }}/auth/v1/verify"
     GOTRUE_EXTERNAL_KEYCLOAK_ENABLED: "###ZARF_VAR_ENABLE_EXTERNAL_KEYCLOAK###"
-    GOTRUE_EXTERNAL_KEYCLOAK_CLIENT_ID: "{{ .Values.leapfrogai.sso.clientId }}"
-    GOTRUE_EXTERNAL_KEYCLOAK_REDIRECT_URI: "https://{{ .Values.leapfrogai.package.host }}.###ZARF_VAR_DOMAIN###/auth/v1/callback"
+    GOTRUE_EXTERNAL_KEYCLOAK_CLIENT_ID: "{{ .Values.leapfrogai.supabase.sso.clientId }}"
+    GOTRUE_EXTERNAL_KEYCLOAK_REDIRECT_URI: "https://{{ .Values.leapfrogai.supabase.sso.host }}.###ZARF_VAR_DOMAIN###/auth/v1/callback"
     GOTRUE_EXTERNAL_KEYCLOAK_URL: "https://sso.###ZARF_VAR_DOMAIN###/realms/uds"
   resourcesPreset: "none"
   podLabels:
@@ -50,6 +52,7 @@ auth:
         secretKeyRef:
           name: sso-client-uds-supabase
           key: secret
+
 meta:
   enabled: ###ZARF_VAR_ENABLE_META###
   resourcesPreset: "none"
