--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -73,6 +73,7 @@ components:
         valuesFiles:
           - "values/upstream/supabase-values.yaml"
           - "values/upstream/supabase-bootstrap-values.yaml"
+          - "values/upstream/leapfrogai-values.yaml"
       # generate the Supabase dashboard secret and setup the UDS package CR
       - name: supabase-secrets-generator
         namespace: leapfrogai
@@ -91,6 +92,7 @@ components:
         version: 4.0.5
         valuesFiles:
           - "values/upstream/supabase-values.yaml"
+          - "values/upstream/leapfrogai-values.yaml"
     images:
       - docker.io/bitnami/gotrue:2.150.1-debian-12-r1
       - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r20
