--- a/packages/ui/chart/templates/ui/migration-job.yaml
+++ b/packages/ui/chart/templates/ui/migration-job.yaml
@@ -5,32 +5,31 @@ metadata:
 spec:
   template:
     spec:
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-      - name: supabase-cli
-        image: "ghcr.io/defenseunicorns/leapfrogai/ui-migrations:{{ .Values.image.tag }}"
-        env:
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: supabase-postgresql
-                  key: postgres-password
-            - name: MIGRATION_NAMESPACE
-              value: "{{ .Values.migration.namespace }}"
-            - name: MIGRATION_SERVICE_NAME
-              value: "{{ .Values.migration.serviceName }}"
-            - name: MIGRATION_SERVICE_PORT
-              value: "{{ .Values.migration.servicePort }}"
-
-        # NOTE: This command is assuming the default username.
-        command: ["/bin/sh"]
-        args:
-          - -c
-          - >-
-            supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
-            supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
-        securityContext:
-          runAsUser: {{ .Values.image.securityContext.runAsUser }}
-          runAsGroup: {{ .Values.image.securityContext.runAsGroup }}
-          fsGroup: {{ .Values.image.securityContext.fsGroup }}
+        - name: supabase-cli
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "ghcr.io/defenseunicorns/leapfrogai/ui-migrations:{{ .Values.image.tag }}"
+          env:
+              - name: POSTGRES_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: supabase-postgresql
+                    key: postgres-password
+              - name: MIGRATION_NAMESPACE
+                value: "{{ .Values.migration.namespace }}"
+              - name: MIGRATION_SERVICE_NAME
+                value: "{{ .Values.migration.serviceName }}"
+              - name: MIGRATION_SERVICE_PORT
+                value: "{{ .Values.migration.servicePort }}"
+          # NOTE: This command is assuming the default username.
+          command: ["/bin/sh"]
+          args:
+            - -c
+            - >-
+              supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
+              supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
       restartPolicy: Never
   backoffLimit: 4
